KL-93/refactor: add filters field in product
- queryparam 및 requestbody 자료구조 set으로 변경
- product 엔티티에 필터 매핑
- product 엔티티에 필터 추가 및 수정 로직 추가
- product filter service 관련 코드 제거
- 상품 생성 및 수정 요청에 필터 관련 로직 추가
- 일부 dto 필드명 변경
- ProductUtil 생성
  - id로 product 엔티티 반환
  - id로 product 엔티티 유무 반환
- 관련 테스트코드 수정